--- a/EquipmentRepairServiceCenter.ASP/Views/Orders/GetForClient.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Orders/GetForClient.cshtml
@@ -6,21 +6,6 @@
     int index = 1;
 }
 
-<div id="dropdown" class="dropdown">
-    <button class="dropbtn">Menu</button>
-    <div class="dropdown-content">
-        <a href="/Clients/GetAll">Clients</a>
-        <a href="/Employees/GetAll">Employees</a>
-        <a href="/Faults/GetAll">Faults</a>
-        <a href="/Orders/GetAll">Orders</a>
-        <a href="/RepairingModels/GetAll">Repairing Models</a>
-        <a href="/ServicedStores/GetAll">Serviced Stores</a>
-        <a href="/SpareParts/GetAll">Spare Parts</a>
-        <a href="/UsedSpareParts/GetAll">Used Spare Parts</a>
-        <a href="/Users/GetAll">Users</a>
-    </div>
-</div>
-
 <div style="padding-bottom: 30px;">
     <h3 class="h3-above-table">Orders</h3>
 
@@ -28,15 +13,14 @@
         <thead>
             <tr>
                 <th>Number</th>
-                <th><a href="/Orders/Get?sortedFieldNumber=1">Order Date 🠕🠗</a></th>
-                <th><a href="/Orders/Get?sortedFieldNumber=2">Equipment Serial Number 🠕🠗</a></th>
+                <th><a href="/Orders/SortForClients?sortedFieldNumber=1">Order Date 🠕🠗</a></th>
+                <th><a href="/Orders/SortForClients?sortedFieldNumber=2">Equipment Serial Number 🠕🠗</a></th>
                 <th>Equipment Return Date</th>
-                <th><a href="/Orders/Get?sortedFieldNumber=3">Client 🠕🠗</a></th>
-                <th><a href="/Orders/Get?sortedFieldNumber=4">Fault 🠕🠗</a></th>
-                <th><a href="/Orders/Get?sortedFieldNumber=5">Serviced Store 🠕🠗</a></th>
-                <th><a href="/Orders/Get?sortedFieldNumber=6">Employee 🠕🠗</a></th>
-                <th><a href="/Orders/Get?sortedFieldNumber=7">Price 🠕🠗</a></th>
-                <th><a href="/Orders/Get?sortedFieldNumber=8">Guarantee (months) 🠕🠗</a></th>
+                <th><a href="/Orders/SortForClients?sortedFieldNumber=4">Fault 🠕🠗</a></th>
+                <th><a href="/Orders/SortForClients?sortedFieldNumber=5">Serviced Store 🠕🠗</a></th>
+                <th><a href="/Orders/SortForClients?sortedFieldNumber=6">Employee 🠕🠗</a></th>
+                <th><a href="/Orders/SortForClients?sortedFieldNumber=7">Price 🠕🠗</a></th>
+                <th><a href="/Orders/SortForClients?sortedFieldNumber=8">Guarantee (months) 🠕🠗</a></th>
             </tr>
         </thead>
         <tbody>
@@ -47,7 +31,6 @@
                     <td>@order.OrderDate</td>
                     <td>@order.EquipmentSerialNumber</td>
                     <td>@order.EquipmentReturnDate</td>
-                    <td>@order.Client.Surname @order.Client.Name @order.Client.MiddleName</td>
                     <td>@order.Fault.Name, @order.Fault.RepairingModel.Name</td>
                     <td>@order.ServicedStore.Name</td>
                     <td>@order.Employee.Surname @order.Employee.Name @order.Employee.MiddleName, @order.Employee.Position</td>
