--- a/EquipmentRepairServiceCenter.ASP/Views/Orders/GetForEmployee.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Orders/GetForEmployee.cshtml
@@ -8,7 +8,7 @@
     <button class="dropbtn">Menu</button>
     <div class="dropdown-content">
         <a href="/Faults/GetAll">Faults</a>
-        <a href="/Orders/GetAllEmployee">Orders</a>
+        <a href="/Orders/GetForEmployee">Orders</a>
         <a href="/RepairingModels/GetAll">Repairing Models</a>
         <a href="/SpareParts/GetAll">Spare Parts</a>
     </div>
