--- a/EquipmentRepairServiceCenter.ASP/Views/RepairingModels/GetAll.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/RepairingModels/GetAll.cshtml
@@ -24,7 +24,7 @@
         @if (userRoles.Contains("Employee"))
         {
             <a href="/Faults/GetAll">Faults</a>
-            <a href="/Orders/GetAllEmployee">Orders</a>
+            <a href="/Orders/GetForEmployee">Orders</a>
             <a href="/RepairingModels/GetAll">Repairing Models</a>
             <a href="/SpareParts/GetAll">Spare Parts</a>
         }
