implement updating and removing entities

--- a/BlazorApp1/Pages/FaultsPage.razor
+++ b/BlazorApp1/Pages/FaultsPage.razor
@@ -40,8 +40,8 @@ else
                     <td>@fault.RepairingModel.Name</td>
                     <td>@fault.RepairingMethods</td>
                     <td>@fault.Price</td>
-                    <td><a href="/Faults/Update?id=@fault.Id" class="ud-button">Update</a></td>
-                    <td><a href="/Faults/Delete?id=@fault.Id" class="ud-button">Delete</a></td>
+                    <td><a href="/faults/update/@fault.Id">Update</a></td>
+                    <td><a href="/faults/delete/@fault.Id">Delete</a></td>
                 </tr>
 
                 index++;
