--- a/BlazorApp1/Pages/SparePartsCreation.razor
+++ b/BlazorApp1/Pages/SparePartsCreation.razor
@@ -41,7 +41,7 @@
     </div>
 
     <div class="mb-3">
-        <label for="Type" class="form-label">Type</label>
+        <label for="EquipmentType" class="form-label">Equipment Type</label>
         <div class="col-md-4">
             <select class="form-control" @bind="sparePart.EquipmentType">
                 @if (sparePart?.EquipmentTypes != null)
