--- a/BlazorApp1/Pages/SparePartsPage.razor
+++ b/BlazorApp1/Pages/SparePartsPage.razor
@@ -41,8 +41,8 @@ else
                     <td>@sparePart.Functions</td>
                     <td>@sparePart.Price</td>
                     <td>@sparePart.EquipmentType</td>
-                    <td><a href="/SpareParts/Update?id=@sparePart.Id" class="ud-button">Update</a></td>
-                    <td><a href="/SpareParts/Delete?id=@sparePart.Id" class="ud-button">Delete</a></td>
+                    <td><a href="/spareParts/update/@sparePart.Id">Update</a></td>
+                    <td><a href="/spareParts/delete/@sparePart.Id">Delete</a></td>
                 </tr>
 
                 index++;
