--- a/BlazorApp1/Pages/SparePartsUpdate.razor
+++ b/BlazorApp1/Pages/SparePartsUpdate.razor
@@ -1,4 +1,4 @@
-﻿@page "/sparePartsCreation"
+﻿@page "/spareParts/update/{id}"
 
 <PageTitle>Spare parts page</PageTitle>
 
@@ -17,14 +17,6 @@
     <DataAnnotationsValidator />
 
     <div class="mb-3">
-        <label for="Name" class="form-label">Name</label>
-        <div class="col-md-4">
-            <InputText class="form-control" @bind-Value="sparePart.Name" />
-        </div>
-        <ValidationMessage For="@(() => sparePart.Name)" />
-    </div>
-
-    <div class="mb-3">
         <label for="Functions" class="form-label">Functions</label>
         <div class="col-md-4">
             <InputText class="form-control" @bind-Value="sparePart.Functions" />
@@ -40,22 +32,6 @@
         <ValidationMessage For="@(() => sparePart.Price)" />
     </div>
 
-    <div class="mb-3">
-        <label for="Type" class="form-label">Type</label>
-        <div class="col-md-4">
-            <select class="form-control" @bind="sparePart.EquipmentType">
-                @if (sparePart?.EquipmentTypes != null)
-                {
-                    @foreach (var item in sparePart.EquipmentTypes)
-                    {
-                                <option value="@item">@item</option>
-                    }
-                }
-            </select>
-        </div>
-        <ValidationMessage For="@(() => sparePart.EquipmentType)" />
-    </div>
-
     <div class="form-group">
         <button type="submit" class="btn btn-primary">Save</button>
         <button class="btn btn-light" @onclick="Cancel">Cancel</button>
@@ -64,16 +40,22 @@
 
 @code {
     [Parameter]
-    public Guid Id { get; set; }
+    public string id { get; set; }
 
-    private SparePartForCreationDto sparePart = new SparePartForCreationDto
-        {
-            EquipmentTypes = DbInitializer.GetEquipmentTypes()
-        };
+    private SparePartForUpdateDto sparePart = new();
+
+    protected override async Task OnParametersSetAsync()
+    {
+        var entity = await SparePartsService.GetById(Guid.Parse(id));
+
+        sparePart.Price = entity.Price;
+        sparePart.Functions = entity.Functions;
+    }
 
     private async Task SaveSparePart()
     {
-        await SparePartsService.Create(sparePart);
+        sparePart.Id = Guid.Parse(id);
+        await SparePartsService.Update(sparePart);
 
         Cancel();
     }
