--- a/BlazorApp1/Shared/NavMenu.razor
+++ b/BlazorApp1/Shared/NavMenu.razor
@@ -19,21 +19,25 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> Counter
             </NavLink>
         </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="faults">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Faults Page
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="repairingModels">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Repairing Models Page
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="spareParts">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Spare Parts Page
-            </NavLink>
-        </div>
+        <AuthorizeView>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="faults">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Faults Page
+                </NavLink>
+            </div>
+
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="repairingModels">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Repairing Models Page
+                </NavLink>
+            </div>
+
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="spareParts">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Spare Parts Page
+                </NavLink>
+            </div>
+        </AuthorizeView>
     </nav>
 </div>
 
